RESOLVED FIXED52376
Incorrect assertion in DrawingAreaImpl::scroll()
https://bugs.webkit.org/show_bug.cgi?id=52376
Summary Incorrect assertion in DrawingAreaImpl::scroll()
mitz
Reported 2011-01-13 10:17:04 PST
Incorrect assertion in DrawingAreaImpl::scroll()
Attachments
Make the assertion valid, and remove it (1.78 KB, patch)
2011-01-13 10:19 PST, mitz
sullivan: review+
mitz
Comment 1 2011-01-13 10:19:44 PST
Created attachment 78824 [details] Make the assertion valid, and remove it
John Sullivan
Comment 2 2011-01-13 10:22:46 PST
Comment on attachment 78824 [details] Make the assertion valid, and remove it Bye-bye uselessly obvious assertion.
mitz
Comment 3 2011-01-13 10:24:58 PST
Note You need to log in before you can comment on or make changes to this bug.