Incorrect assertion in DrawingAreaImpl::scroll() https://bugs.webkit.org/show_bug.cgi?id=52376

Reviewed by John Sullivan.

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::scroll): Changed to take the fast path if the rects have the same area.
This made the assertion valid, but I removed it anyway.



Canonical link: https://commits.webkit.org/65987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75722 268f45cc-cd09-0410-ab3c-d52691b4dbfc